--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,11 +18,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Get version
+        id: version
+        run: |
+          echo "contents<<VERSIONEOF" >> $GITHUB_OUTPUT
+          echo "$GITHUB_REF" | cut -d / -f 3 >> $GITHUB_OUTPUT
+          echo "VERSIONEOF" >> $GITHUB_OUTPUT
+
       - name: Changelog
         id: changelog
         run: |
           echo "contents<<CHANGELOGEOF" >> $GITHUB_OUTPUT
-          sed -e '1,/##/d' -e '/##/,$d' CHANGELOG.md >> $GITHUB_OUTPUT
+          sed -e "1,/## ${{ steps.version.outputs.contents }}/d" -e '/##/,$d' CHANGELOG.md >> $GITHUB_OUTPUT
           echo "CHANGELOGEOF" >> $GITHUB_OUTPUT
 
       - name: Create release
