--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - '*.*.*'
 
 jobs:
   docker-push:
@@ -21,6 +23,13 @@ jobs:
       - name: Install dependencies
         run: make install
 
+      - name: Get version
+        id: version
+        run: |
+          echo "contents<<VERSIONEOF" >> $GITHUB_OUTPUT
+          echo "$GITHUB_REF" | cut -d / -f 3 >> $GITHUB_OUTPUT
+          echo "VERSIONEOF" >> $GITHUB_OUTPUT
+
       - name: Generate docs
         run: make generate-docs
 
@@ -32,3 +41,5 @@ jobs:
           FOLDER: docs
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SKIP_EMPTY_COMMITS: true
+          MESSAGE: "Docs for ${{ steps.version.outputs.contents }} commit {sha}"
+          TARGET_DIR: ${{ steps.version.outputs.contents }}
