--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,15 +25,26 @@ jobs:
           echo "$GITHUB_REF" | cut -d / -f 3 >> $GITHUB_OUTPUT
           echo "VERSIONEOF" >> $GITHUB_OUTPUT
 
-      - name: Changelog
-        id: changelog
+      - name: Get prerelease state
+        id: prerelease
         run: |
-          echo "contents<<CHANGELOGEOF" >> $GITHUB_OUTPUT
-          sed -e "1,/## ${{ steps.version.outputs.contents }}/d" -e '/##/,$d' CHANGELOG.md >> $GITHUB_OUTPUT
-          echo "CHANGELOGEOF" >> $GITHUB_OUTPUT
+          echo "contents<<EOF" >> $GITHUB_OUTPUT
+
+          if [[ "${{ steps.version.outputs.contents }} = *"-"* ]]; then
+            echo "true" >> $GITHUB_OUTPUT
+          else
+            echo "false" >> $GITHUB_OUTPUT
+          fi
+
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Generate release notes
+        id: changelog
+        run: make generate-release-notes VERSION=${{ steps.version.outputs.contents }}
 
       - name: Create release
         id: create_release
         uses: shogo82148/actions-create-release@v1
         with:
-          body: ${{ steps.changelog.outputs.contents }}
+          body_path: ${{ github.workspace }}/RELEASE-NOTES.md
+          prerelease: ${{ steps.prerelease.outputs.contents }}
