Tweak SonarCloud source files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,9 @@ sonar.organization=gocom
 sonar.projectKey=gocom_resolution
 sonar.projectName=resolution
 
-sonar.sources=src
-sonar.tests=src/__tests__
+sonar.sources=src/
+sonar.exclusions=src/__tests__/**/*
+sonar.tests=src/
+sonar.test.inclusions=src/__tests__/**/*
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=test-reports/coverage/lcov.info
