--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         id: changelog
         run: make generate-release-notes VERSION=${{ steps.version.outputs.contents }}
 
-      - name: Create pre-release
+      - name: Create release
         id: create_release
         uses: shogo82148/actions-create-release@v1
         with:
