--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,22 +23,23 @@ jobs:
         with:
           node-version: 22
 
-      - name: Get version
-        id: version
+      - name: Configure token
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          echo "contents<<VERSIONEOF" >> $GITHUB_OUTPUT
-          echo "$GITHUB_REF" | cut -d / -f 3 >> $GITHUB_OUTPUT
-          echo "VERSIONEOF" >> $GITHUB_OUTPUT
+          npm config set "//registry.npmjs.org/:_authToken" "$NPM_TOKEN"
+        if: ${{ !!env.NPM_TOKEN }}
+
+      - name: Get metadata
+        id: meta
+        run: |
+          echo "version=$(basename "$GITHUB_REF")" >> $GITHUB_OUTPUT
 
       - name: Pre-publish
-        run: make pre-publish VERSION=${{ steps.version.outputs.contents }}
+        run: make pre-publish VERSION=${{ steps.meta.outputs.version }}
 
       - name: Build
         run: make build
 
       - name: Publish
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          npm config set "//registry.npmjs.org/:_authToken" "$NPM_TOKEN"
-          npm publish --provenance --access public
+        run: npm publish --provenance --access public
